@@ -5,6 +5,7 @@ or someone is missing who should be listed there!
 
 Shaju Abraham
 Julien Aube
+Stefano Babic
 Beregnyei Balazs
 Michael Banditt
 Jeff Bartlett
